--- a/sample.env
+++ b/sample.env
@@ -1,1 +1,1 @@
-OPENAI_API_KEY="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"
+OPENAI_API_KEY=YOUR_API_KEY
